# badbatch

./: .gitignore  AGENTS.md  CHANGELOG.md  CLI_FIXES_REPORT.md  CRITICAL_FIXES_REPORT.md  Cargo.toml  DESIGN.md  EVALUATION_RESPONSE.md  FLAMEGRAPH_GUIDE.md  NOTICE  PROJECT_SUMMARY.md  QUICK_START.md  README.md  benchmark_disruptor  commit_message.txt  debug_mpsc.rs  debug_mpsc_simple.rs  deny.toml  review_report.md  rust-toolchain.toml  test_disruptor_fix
.cargo/: config.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: benchmark.yml  release.yml  test.yml
.github/workflows-backup/: ci.yml  dependencies.yml
benches/: ORGANIZATION.md  README.md  badbatch_spsc_benchmark.rs  buffer_size_scaling.rs  comprehensive_benchmarks.rs  disruptor_bench.rs  latency_comparison.rs  minimal_test.rs  mpsc_benchmark.rs  multi_producer_single_consumer.rs  pipeline_processing.rs  simple_benchmark.rs  single_producer_single_consumer.rs  spsc_benchmark.rs  throughput_comparison.rs
benches/results/: BASELINE.md  H2H_FULL_NATIVE.md  H2H_POST_ALIGN.md  H2H_POST_AUDIT.md  baseline_latest.md  baseline_unix1784272483.md  baseline_unix1784272484.md  baseline_unix1784272485.md  baseline_unix1784394033.md  baseline_unix1784394035.md  baseline_unix1784394036.md
docs/: BadBatch_vs_disruptor-rs(Claude4).md  BadBatch_vs_disruptor-rs(chatgpt-o3).md  BadBatch_vs_disruptor-rs_Builder_Analysis.md  BadBatch与LMAXDisruptor性能对比基准方案.md  CHANGELOG.md  COVERAGE_GUIDE.md  DESIGN.md  GITHUB_ACTIONS_SETUP.md  MODERNIZATION.md  PERFORMANCE.md  README.md  TEST_INTEGRATION_SUMMARY.md
proptest-regressions/disruptor/: property_tests.txt
scripts/: benchmark_usage.md  loom-smoke.sh  macos_flamegraph.sh  result_formatter.sh  run_baseline.sh  run_benchmarks.sh  run_head_to_head.sh  setup_head_to_head_lmax.sh  test-all.sh  test_head_to_head.sh
src/: lib.rs  main.rs
src/api/: error.rs  global_manager.rs  manager.rs  middleware.rs  mod.rs  models.rs  routes.rs  server.rs
src/api/handlers/: disruptor.rs  events.rs  metrics.rs  mod.rs  system.rs
src/client/: mod.rs
src/cluster/: config.rs  discovery.rs  error.rs  gossip.rs  health.rs  membership.rs  mod.rs  node.rs  replication.rs
src/disruptor/: builder.rs  consumer_engine.rs  core_interfaces.rs  disruptor.rs  elegant_consumer.rs  event_factory.rs  event_handler.rs  event_poller.rs  event_processor.rs  event_translator.rs  exception_handler.rs  failure.rs  internal_log.rs  mod.rs  producer.rs  producer_type.rs  property_tests.rs  ring_buffer.rs  sequence.rs  sequence_barrier.rs  sequencer.rs  simple_wait_strategy.rs  thread_management.rs  wait_strategy.rs
src/disruptor/builder/: consumer.rs  core.rs  entry.rs  fluent.rs  handle.rs  mod.rs  tests.rs
src/disruptor/builder/tests/: basic.rs  common.rs  failure_diagnostics.rs  handle.rs  integration.rs  integration_comprehensive.rs  integration_e2e.rs  mod.rs  pipeline.rs  pipeline_dependency.rs  pipeline_parallel.rs
tests/: adversarial_residuals.rs  api_discrepancy_analysis.rs  api_integration_test.rs  corrected_readme_examples.rs  disruptor_integration_test.rs  documentation_api_verification.rs  event_processing_integration_test.rs  failure_semantics.rs  fanout_readonly_stress.rs  lifecycle_residuals.rs  loom_work_claim.rs  mpmc_continuity_test.rs  mpmc_with_shutdown_contiguity.rs  mpsc_debug.rs  mpsc_exact_repro.rs  mpsc_exactly_once_stress.rs  mpsc_stress_test.rs  shutdown_semantics.rs  soundness_regression.rs  try_publish_errors.rs  ui_compile_fail.rs  worker_pool_claim_stress.rs
tests/ui/: simple_producer_not_clone.rs  simple_producer_not_clone.stderr  single_handle_no_cloneable_producer.rs  single_handle_no_cloneable_producer.stderr  single_handle_no_create_producer.rs  single_handle_no_create_producer.stderr
tools/head_to_head/: README.md  instrument_lmax.py  lmax.env  record_fork.py  report_forks.py  test_report_forks.py
tools/head_to_head/java/com/lmax/disruptor/: H2HDiagnostics.java
tools/head_to_head/java/com/lmax/disruptor/headtohead/: HeadToHead.java
verification/: BadBatchMPMC.tla  BadBatchMPMC_old.tla  BadBatchPipeline.tla  BadBatchRingBuffer.tla  BadBatchSPMC.tla  CONSISTENCY.md  README.md  SimpleRingBuffer.tla  SimpleSPMC.tla  verify.sh
verification/configs/: extended_config.cfg  mpmc_config.cfg  mpsc_config.cfg  pipeline_config.cfg  simple_spmc_config.cfg  spmc_config.cfg
