[package]
name = "badbatch"
version = "0.2.0"
edition = "2021"
rust-version = "1.97"
authors = ["Joe <smartjoe@gmail.com>"]
description = "High-Performance Disruptor Engine - A complete Rust implementation of the LMAX Disruptor pattern"
license = "AGPL-3.0"
repository = "https://github.com/deadjoe/badbatch"
keywords = ["disruptor", "lock-free", "high-performance", "messaging", "queue"]
categories = ["concurrency", "data-structures", "network-programming"]

[lib]
name = "badbatch"
path = "src/lib.rs"

[dependencies]
# Error handling
thiserror = "2.0"

# Synchronization primitives
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
crossbeam-utils = "0.8"
arc-swap = "1.9"
core_affinity = "0.8"

[dev-dependencies]
# Testing and benchmarking
criterion = { version = "0.8", features = ["html_reports"] }
crossbeam = "0.8"  # For performance comparison benchmarks
proptest = "1.11"  # Property-based testing
# Exhaustive concurrency exploration for small WorkerPool claim models (P2).
loom = "0.7"

[features]
# Preferred core path is always on: Builder + Producer + EventPoller + sequencers.
# `lmax-dsl` keeps the classic Disruptor DSL (default on for continuity of tests/docs).
# `extras` gates ElegantConsumer and other experimental surfaces.
# Core (always on): Builder + Producer + EventPoller + sequencers + consumer_engine.
# Optional surfaces stay default-on for continuity; CI also runs --no-default-features.
#   lmax-dsl — classic Disruptor DSL / BatchEventProcessor-oriented API
#   extras   — ElegantConsumer and similar experimental helpers
default = ["lmax-dsl", "extras"]
lmax-dsl = []
extras = []
# Non-lock-free convenience wrapper (`SharedRingBuffer` uses RwLock).
# NOT part of the core lock-free Disruptor path — opt-in only.
shared-ring-buffer = []
full-benchmarks = []

[profile.release]
# Optimize for performance
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
# Optimize benchmarks
opt-level = 3
lto = true
codegen-units = 1
debug = true

[lints.rust]
unsafe_code = "allow"
missing_docs = "warn"

[lints.clippy]
all = "deny"
pedantic = { level = "warn", priority = -1 }
uninlined_format_args = "deny"

# Benchmark configurations
[[bench]]
name = "single_producer_single_consumer"
harness = false

[[bench]]
name = "multi_producer_single_consumer"
harness = false

[[bench]]
name = "pipeline_processing"
harness = false

[[bench]]
name = "latency_comparison"
harness = false

[[bench]]
name = "throughput_comparison"
harness = false

[[bench]]
name = "buffer_size_scaling"
harness = false

[[bench]]
name = "comprehensive_benchmarks"
harness = false
