[package]
name = "badbatch"
version = "0.2.0"
edition = "2021"
rust-version = "1.97"
authors = ["Joe <smartjoe@gmail.com>"]
description = "High-Performance Disruptor Engine - A complete Rust implementation of the LMAX Disruptor pattern"
license = "Apache-2.0"
repository = "https://github.com/deadjoe/badbatch"
keywords = ["disruptor", "lock-free", "high-performance", "messaging", "queue"]
categories = ["concurrency", "data-structures", "network-programming"]

[lib]
name = "badbatch"
path = "src/lib.rs"

[dependencies]
# Error handling
thiserror = "2.0"

# Standard library logging facade. BadBatch never installs a logger; applications
# choose the backend and filtering policy. Calls are confined to lifecycle/error paths.
log = "0.4"

# Synchronization primitives
parking_lot = "0.12"
crossbeam-utils = "0.8"
arc-swap = "1.9"
core_affinity = "0.8"

[dev-dependencies]
# Testing and benchmarking
criterion = { version = "0.8", features = ["html_reports"] }
crossbeam = "0.8"  # For performance comparison benchmarks
proptest = "1.11"  # Property-based testing
# Exhaustive concurrency exploration for small WorkerPool claim models (P2).
loom = "0.7"
# Negative compile tests for soundness API boundaries.
trybuild = "1.0"

[features]
# Preferred core path is always on: Builder + Producer + EventPoller + sequencers.
# `lmax-dsl` keeps the classic Disruptor DSL (default on for continuity of tests/docs).
# `extras` gates ElegantConsumer and other experimental surfaces.
# Core (always on): Builder + Producer + EventPoller + sequencers + consumer_engine.
# Optional surfaces stay default-on for continuity; CI also runs --no-default-features.
#   lmax-dsl — classic Disruptor DSL / BatchEventProcessor-oriented API
#   extras   — ElegantConsumer and similar experimental helpers
default = ["lmax-dsl", "extras"]
lmax-dsl = []
extras = []
# Opt-in lock diagnostics: enables parking_lot's deadlock detector (extra
# dependencies + background lock tracking). Never enable in production builds.
deadlock-detection = ["parking_lot/deadlock_detection"]
# Diagnostic / benchmark binaries (h2h_rust, baseline_metrics, *_breakdown).
# ~4.3K lines that only benchmark scripts need; gated so library builds and
# `cargo build --bins` in CI/dev stay lean.
bench-tools = []
# Opt-in per-round H2H probes. Kept separate so canonical benchmark hot paths
# have no probe branches, counters, or code-layout changes.
bench-round-diagnostics = ["bench-tools"]

[profile.release]
# Optimize for performance
opt-level = 3
lto = true
codegen-units = 1
# No `panic = "abort"`: the failure-propagation design (2026-07-18 audit)
# poisons the pipeline via unwinding (catch_unwind in consumer threads,
# drop guards on producer claim windows). Root applications that want abort
# semantics can set it in their own profile.

[profile.bench]
# Optimize benchmarks
opt-level = 3
lto = true
codegen-units = 1
debug = true

[lints.rust]
unsafe_code = "allow"
missing_docs = "warn"

[lints.clippy]
all = "deny"
pedantic = { level = "warn", priority = -1 }
uninlined_format_args = "deny"

# Diagnostic / benchmark binaries — built only with `--features bench-tools`
[[bin]]
name = "h2h_rust"
path = "src/bin/h2h_rust.rs"
required-features = ["bench-tools"]

[[bin]]
name = "baseline_metrics"
path = "src/bin/baseline_metrics.rs"
required-features = ["bench-tools"]

[[bin]]
name = "unicast_breakdown"
path = "src/bin/unicast_breakdown.rs"
required-features = ["bench-tools"]

[[bin]]
name = "pipeline_breakdown"
path = "src/bin/pipeline_breakdown.rs"
required-features = ["bench-tools"]

# Benchmark configurations. These targets exercise the classic Disruptor DSL,
# so Cargo must skip them when validating the core-only feature surface.
[[bench]]
name = "single_producer_single_consumer"
harness = false
required-features = ["lmax-dsl"]

[[bench]]
name = "multi_producer_single_consumer"
harness = false
required-features = ["lmax-dsl"]

[[bench]]
name = "pipeline_processing"
harness = false
required-features = ["lmax-dsl"]

[[bench]]
name = "latency_comparison"
harness = false
required-features = ["lmax-dsl"]

[[bench]]
name = "throughput_comparison"
harness = false
required-features = ["lmax-dsl"]

[[bench]]
name = "buffer_size_scaling"
harness = false
required-features = ["lmax-dsl"]

[[bench]]
name = "comprehensive_benchmarks"
harness = false
required-features = ["lmax-dsl"]

# Compile-fail UI tests for soundness surface (clone / mode gates).
[[test]]
name = "ui_compile_fail"
path = "tests/ui_compile_fail.rs"

# Integration targets that exercise optional API surfaces. Declaring these
# requirements lets `cargo check --all-targets --no-default-features` validate
# the actual core-only target set instead of compiling feature-incompatible
# fixtures and hiding the resulting errors.
[[test]]
name = "adversarial_residuals"
path = "tests/adversarial_residuals.rs"
required-features = ["lmax-dsl"]

[[test]]
name = "api_discrepancy_analysis"
path = "tests/api_discrepancy_analysis.rs"
required-features = ["lmax-dsl", "extras"]

[[test]]
name = "corrected_readme_examples"
path = "tests/corrected_readme_examples.rs"
required-features = ["lmax-dsl", "extras"]

[[test]]
name = "disruptor_integration_test"
path = "tests/disruptor_integration_test.rs"
required-features = ["lmax-dsl"]

[[test]]
name = "documentation_api_verification"
path = "tests/documentation_api_verification.rs"
required-features = ["lmax-dsl", "extras"]

[[test]]
name = "event_processing_integration_test"
path = "tests/event_processing_integration_test.rs"
required-features = ["lmax-dsl"]

[[test]]
name = "lifecycle_residuals"
path = "tests/lifecycle_residuals.rs"
required-features = ["lmax-dsl"]

[[test]]
name = "mpsc_debug"
path = "tests/mpsc_debug.rs"
required-features = ["lmax-dsl"]

[[test]]
name = "mpsc_exact_repro"
path = "tests/mpsc_exact_repro.rs"
required-features = ["lmax-dsl"]
